samples/_failures_safe/1761414668_10ddad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83b7b64a.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_83b7b64a.c:187:24: error: missing terminating " character
  187 |                 printf("STRING: \"%s\" (
      |                        ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_83b7b64a.c:187:17: error: expected expression at end of input
  187 |                 printf("STRING: \"%s\" (
      |                 ^~~~~~
./samples/SAFE/__tmp_83b7b64a.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83b7b64a.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83b7b64a.c:187:17: error: expected declaration or statement at end of input
